# TrendRadar

./: .gitignore  LANGCHAIN_ANALYSIS.md  OLLAMA_SETUP.md  pyproject.toml  quickstart.md  readme.md  test_langchain_integration.py
config/: config.schema.yaml
docker/: Dockerfile
langchain_agents/: README.md  __init__.py  config.py
langchain_agents/agents/: __init__.py  base_agent.py  news_analyst.py  news_qa_agent.py  trend_predictor.py
langchain_agents/chains/: __init__.py  rag_chain.py  summary_chain.py
langchain_agents/memory/: __init__.py  conversation_buffer.py
langchain_agents/middleware/: __init__.py  cache.py  cost_tracker.py  rate_limit.py
langchain_agents/tools/: __init__.py  trendradar_tools.py
langchain_agents/vectorstore/: __init__.py  chroma_store.py
scripts/: setup.sh
web/: api.py  start_backend.sh  start_frontend.sh
web/static/: index.html
